force-app/main/default/objects/User/fields/Active_Portal_User__c.field-meta.xml
<CustomField>
    <fullName>Active_Portal_User__c</fullName>
    <formula>AND(
IsActive ,
 NOT(ISNULL( Contact.LastName))  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Portal User</label>
    <type>Checkbox</type>
</CustomField>