force-app/main/default/objects/User/fields/FIN_Available_Regions__c.field-meta.xml
<CustomField>
    <fullName>FIN_Available_Regions__c</fullName>
    <label>Available Regions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FIN_Region</valueSetName>
    </valueSet>
</CustomField>