force-app/main/default/objects/User/fields/FIN_Current_Region__c.field-meta.xml
<CustomField>
    <fullName>FIN_Current_Region__c</fullName>
    <label>Current Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FIN_Region</valueSetName>
    </valueSet>
</CustomField>