force-app/main/default/objects/User/validationRules/Selected_Region_is_Available.validationRule-meta.xml
<ValidationRule>
    <fullName>Selected_Region_is_Available</fullName>
    <active>false</active>
    <errorConditionFormula>((INCLUDES(FIN_Available_Regions__c, &apos;US&apos;) &amp;&amp; ISPICKVAL(FIN_Current_Region__c, &apos;US&apos;))|| 
(INCLUDES(FIN_Available_Regions__c, &apos;SWE&apos;) &amp;&amp; ISPICKVAL(FIN_Current_Region__c,&apos;SWE&apos;)))||
((INCLUDES(FIN_Available_Regions__c, &apos;UK&apos;) &amp;&amp; ISPICKVAL(FIN_Current_Region__c, &apos;UK&apos;)))</errorConditionFormula>
    <errorMessage>The selected region must be available</errorMessage>
</ValidationRule>